# tikclip

./: .gitignore  AGENTS.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
docs/: README.md
docs/architecture/: data-flow.md  frontend.md  overview.md  rust-runtime.md  storage-and-time.md  tauri-boundary.md
docs/contracts/: database.md  flow-pipeline.md  media-paths.md  runtime-events.md  settings.md  tauri-commands.md
docs/decisions/: 0001-rust-owned-runtime.md  0002-fixed-flow-pipeline.md
docs/features/: accounts.md  captions.md  clips.md  flows.md  notifications.md  products.md  recordings.md  storage-cleanup.md
docs/operations/: build-and-release.md  docs-maintenance.md  local-development.md  troubleshooting.md  verification.md
docs/product/: overview.md  terminology.md  user-workflows.md
sidecar/: .env.example  pyproject.toml
sidecar/src/: __init__.py  app.py  config.py  logging_config.py  main.py  onnx_runtime_preload.py
sidecar/src/core/: __init__.py  audio_processor.py  captioner.py  cleanup.py  model_manager.py  processor.py  recorder.py  time_hcm.py  watcher.py  worker.py
sidecar/src/embeddings/: __init__.py  clip_product_suggest.py  gemini.py  product_vector.py  video_frames.py  zvec_runtime.py
sidecar/src/models/: __init__.py  schemas.py
sidecar/src/routes/: accounts.py  clips.py  health.py  products.py  recordings.py  storage.py  trim.py
sidecar/src/tiktok/: __init__.py  api.py  cookies.py  http_transport.py  product_scraper.py  stream.py
sidecar/src/ws/: manager.py
sidecar/tests/: conftest.py  test_clips_schedule.py  test_health.py  test_live_overview.py  test_processor.py  test_tiktok_api.py  test_watcher.py  test_worker.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_paths.rs  lib.rs  main.rs  sidecar_env.rs  time_hcm.rs  tray.rs
src-tauri/src/commands/: accounts.rs  clips.rs  dashboard.rs  flow_engine.rs  flows.rs  live_runtime.rs  mod.rs  notifications.rs  paths.rs  products.rs  recordings.rs  settings.rs  storage.rs
src-tauri/src/commands/flow_engine/: drafts.rs  publish.rs  queries.rs  restart.rs
src-tauri/src/commands/flow_engine/tests/: drafts.rs  mod.rs  publish.rs  queries.rs  reconcile.rs  restart.rs
src-tauri/src/db/: init.rs  models.rs
src-tauri/src/db/migrations/: 001_initial.sql  002_sidecar_recording_id.sql  003_timestamps_gmt_plus_7.sql  004_product_enhancements.sql  005_product_media_files.sql  006_speech_segments.sql  007_flows.sql  008_flow_engine_rebuild.sql  009_repair_flow_foreign_keys.sql  010_product_embedding_vectors.sql  011_external_recording_id.sql
src-tauri/src/live_runtime/: account_binding.rs  logs.rs  manager.rs  mod.rs  normalize.rs  session.rs  types.rs
src-tauri/src/live_runtime/manager/: clips.rs  events.rs  polling.rs  recordings.rs  runs.rs  sessions.rs  store.rs
src-tauri/src/live_runtime/manager/tests/: events.rs  mod.rs  polling.rs  runs.rs  sessions.rs
src-tauri/src/live_runtime/manager/tests/recordings/: cancellation.rs  finalization.rs  handoff.rs  mod.rs  worker.rs
src-tauri/src/recording_runtime/: types.rs  worker.rs
src-tauri/src/sidecar/: mod.rs
src-tauri/src/tiktok/: check_live.rs  client.rs  http_transport.rs  mod.rs  product_fetch.rs  types.rs
src-tauri/src/workflow/: caption_node.rs  clip_node.rs  constants.rs  mod.rs  node_runner.rs  record_node.rs  runtime_store.rs  start_node.rs  types.rs
src-tauri/src/workflow/clip_node/: clip_processing.rs  common.rs  product_suggest.rs  product_vectors.rs
src-tauri/src/workflow/record_node/: audio_processing.rs
(+142 files in other folders)
