[project]
name = "tikclip-sidecar"
version = "0.1.0"
description = "TikClip recording and processing sidecar service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "websockets>=14.0",
    "curl-cffi>=0.7",
    "httpx>=0.28",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "scenedetect[opencv]>=0.6",
    "zvec>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "ruff>=0.11",
    "ty>=0.0.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
# RUF006: intentional fire-and-forget background tasks; SIM105: async cancel cleanup is clearer as try/except
ignore = ["RUF006", "SIM105"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
# Project roots for first-party module resolution (src layout).
root = ["src"]
